:bug: form contact button spacing buggs

--- a/src/_assets/scss/components/sections/_bofu-form.scss
+++ b/src/_assets/scss/components/sections/_bofu-form.scss
@@ -24,6 +24,10 @@
             box-shadow: none !important;
         }
 
+        .navbar-phone {
+            @extend .mt-3;
+        }
+
         .submit-holder {
             @extend .mt-4, .mt-md-4, .pt-4, .text-center, .row;
             width: 100%;
